share/cascade/test/regression/type_check/fail/declaration_1.v
localparam x = 0;
genvar x;
